# Media-Converter

./: .gitignore  README.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.3.0.md  RELEASE_NOTES_v1.4.0.md  build.sh  fileconverter.spec  install-macos.sh  install.sh  pyproject.toml
.github/workflows/: release.yml
fileconverter/: __init__.py  __main__.py  cli.py  config.py  helpers.py  i18n.py  path_helpers.py  presets.py
fileconverter/integration/: __init__.py  install.py  macos.py  nautilus_extension.py
fileconverter/jobs/: __init__.py  base.py  factory.py  ffmpeg.py  gif.py  imagemagick.py  libreoffice.py  proc.py
fileconverter/locales/: fileconverter.pot
fileconverter/resources/: default_presets.yaml  fileconverter.desktop
fileconverter/ui/: __init__.py  native_ui.py  picker.py  preset_picker.py  preset_picker_tk.py  progress_window.py  progress_window_tk.py  settings_window.py  settings_window_tk.py
fileconverter/ui/native/: FileConverterUI.swift  FinderSyncExt.swift  HostApp.swift
locales/: build.py
locales/ar_EG/LC_MESSAGES/: fileconverter.mo
locales/cs_CZ/LC_MESSAGES/: fileconverter.mo
locales/de_DE/LC_MESSAGES/: fileconverter.mo  fileconverter.po
locales/el_GR/LC_MESSAGES/: fileconverter.mo  fileconverter.po
locales/fa_IR/LC_MESSAGES/: fileconverter.po
locales/fr_FR/LC_MESSAGES/: fileconverter.mo
locales/hi_IN/LC_MESSAGES/: fileconverter.po
locales/hu_HU/LC_MESSAGES/: fileconverter.po
packaging/aur/: README.md
resources/: default_presets.yaml
tests/: conftest.py  fcutil.py  test_audio_formats.py  test_document_formats.py  test_image_formats.py  test_linux_integration.py  test_regressions_v140.py  test_routing_and_edges.py  test_video_formats.py
(+50 files in other folders)
