[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fileconverter"
version = "1.4.0"
description = "Linux and macOS port of File Converter — right-click context menu file conversion"
license = "GPL-3.0-or-later"
# 3.9 floor so the macOS system Python (Command Line Tools) works out of the box.
requires-python = ">=3.9"
dependencies = [
    "PyYAML>=6.0",
    # GTK bindings are only used (and only installable sanely) on Linux;
    # macOS uses tkinter from the standard library.
    'PyGObject>=3.42; sys_platform == "linux"',
]

[project.scripts]
fileconverter = "fileconverter.cli:main"
fileconverter-pick = "fileconverter.ui.preset_picker:main"
fileconverter-install = "fileconverter.integration.install:main"

[tool.setuptools.packages.find]
include = ["fileconverter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]
# Real-tool conversions can take a few seconds each (especially LibreOffice).
addopts = "-ra"
